default/objects/GFN_Dashboard_UI_settings__mdt/GFN_Dashboard_UI_settings__mdt.object-meta.xml
<CustomObject>
    <description>List of components which should be displayed on GFN Dashboard</description>
    <label>GFN Dashboard UI settings</label>
    <pluralLabel>GFN Dashboard UI settings</pluralLabel>
</CustomObject>