default/objects/GFN_Dashboard_UI_settings__mdt/fields/Fields__c.field-meta.xml
<CustomField>
    <fullName>Fields__c</fullName>
    <label>Fields</label>
    <type>TextArea</type>
</CustomField>