default/objects/GFN_Dashboard_UI_settings__mdt/fields/Line_Of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_Of_Business__c</fullName>
    <label>Line Of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SME</fullName>
                <default>true</default>
                <label>SME</label>
            </value>
            <value>
                <fullName>CCS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>