default/objects/GFN_Dashboard_UI_settings__mdt/fields/Tab__c.field-meta.xml
<CustomField>
    <fullName>Tab__c</fullName>
    <label>Tab</label>
    <length>20</length>
    <type>Text</type>
</CustomField>