default/objects/GFN_Dashboard_UI_settings__mdt/fields/Tab_Icon__c.field-meta.xml
<CustomField>
    <fullName>Tab_Icon__c</fullName>
    <label>Tab Icon</label>
    <length>20</length>
    <type>Text</type>
</CustomField>